# gifff

./: .gitignore  Cargo.toml  LICENSE  README.md  canvas.d.ts  canvas.js  index.ts  package.json  rollup.config.js  tsconfig.json  utils.d.ts  wasm.d.ts  wasm.js
__test__/: canvas.html  index.html  wasm.html
src/: canvas.ts  lib.rs  utils.ts  wasm.ts
