[package]
name = "gifff"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
image = "0.23"
reqwest = "0.11"
base64 = "0.13"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
